fine tuned .html-thumbnail.html img widths to prevent overflow

--- a/sass/_project-sass/_project-Main.scss
+++ b/sass/_project-sass/_project-Main.scss
@@ -1002,14 +1002,18 @@ a.tag:hover {
   }
   &:first-child .html-thumbnail.html {
     width: 540px;
+    height: 405px;
     @media (max-device-width:480px), screen and (max-width:800px) {
       width: 270px;
       height: 202px;
     }
   }
   &:first-child .html-thumbnail.html img {
-    width: 540px;
-    height: 405px;
+    aspect-ratio: 540 / 405;
+    height: auto;
+    max-width: 540px;
+    width: 52vw;
+    float: left;
     @media (max-device-width:480px), screen and (max-width:800px) {
       width: 270px;
       height: 202px;
